[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reparatio-mcp"
version = "0.1.0"
description = "MCP server for Reparatio — file conversion, merging, and SQL queries"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage   = "https://reparatio.app"

[project.scripts]
reparatio-mcp = "reparatio_mcp.server:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/reparatio_mcp"]
